--- a/library.html
+++ b/library.html
@@ -11,7 +11,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
@@ -19,20 +18,11 @@
   <!-- MDB -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
   <link rel="icon" type="image/png" href="photos/grid-c-logo.png">
-
-
-  <style>
-
-  </style>
 </head>
 
 <body>
-
   <!--HEADERRRRRRRR-->
   <header class="sticky-top">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -117,69 +107,8 @@
   </header>
   <!--HEADER END-->
 
-  <!--Carousel Content-->
-
-
-
-  <div class="container mb-5 py-5">
-    <div id="carouselExampleCaptions" class="carousel slide">
-      <h1 class="oltime">All-Time Books</h1>
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <a href="https://www.webnovelpub.com/novel/infinite-mana-in-the-apocalypse-novel-14051339" target="_blank">
-            <img src="photos/NoahOsmot.jpg" class="d-block w-100" alt="1st Novel Photo">
-          </a>
-          <div class="carousel-caption d-none d-md-block ">
-            <h5>Infinite Mane In The Apocalypese</h5>
-            <p>Video Games, Action, Adventure, System, Overpowered.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <a href="https://www.webnovelpub.com/novel/trash-count-wn-14051348" target="_blank">
-            <img src="photos/TrashofTheCountsFam.jpg" class="d-block w-100" alt="2nd Novel Photo">
-          </a>
-          <div class="carousel-caption d-none d-md-block">
-
-          </div>
-        </div>
-        <div class="carousel-item">
-          <a href="https://www.webnovelpub.com/novel/strongest-necromancer-of-heavens-gate-14051726" target="_blank">
-            <img src="photos/StrongestNecro.jpg" class="d-block w-100" alt="3rd Novel Photo">
-          </a>
-          <div class="carousel-caption d-none d-md-block">
-
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  </div>
-  </div>
-
-
-  <div class="container mt-5 py-5">
-
-  </div>
-
-
   <!-- Cards -->
+
   <div class="container text-center cardcontainer">
 
     <div class="container mt-5 py-5">
@@ -197,7 +126,7 @@
                 <br>
                 A story of a boy who died early and got reincarnated in another world.
               </p>
-              <a href="https://www.webnovel.com/book/mmorpg-rise-of-the-primordial-godsmith_24625220206505305"
+              <a href="https://www.webnovel.com/book/mmorpg-rise-of-the-primordial-godsmith_24625220206505305/a-second-chance_66102828141169138"
                 class="btn btn-primary" target="_blank">
                 Continue</a>
             </div>
@@ -214,7 +143,7 @@
                 “Darkness cannot drive out darkness, only Light can do that," the Goddess Amalthea said as she held
                 William in her loving embrace.
                 "Hate cannot drive out hate, only Love can do that.”</p>
-              <a href="https://www.webnovel.com/book/reincarnated-with-the-strongest-system_19720038005035905"
+              <a href="https://www.webnovel.com/book/reincarnated-with-the-strongest-system_19720038005035905/i%E2%80%99m-going-ahead-first%E2%80%A6-don%E2%80%99t-miss-me-too-much_52935834931880667"
                 class="btn btn-primary" target="_blank">
                 Continue</a>
             </div>
@@ -233,7 +162,7 @@
                 He was warned that he could perish in the Arcane Academy but he gritted his teeth and took the risk...
                 and because of his decision, he unveiled many secrets about...
               </p>
-              <a href="https://www.webnovel.com/book/arcane-academy-the-divine-extraction-legacy_25763450805818805"
+              <a href="https://www.webnovel.com/book/arcane-academy-the-divine-extraction-legacy_25763450805818805/application_69158243447926461"
                 class="btn btn-primary" target="_blank">Continue</a>
             </div>
           </div>
@@ -250,8 +179,8 @@
                 All the Humans from Earth was suddenly transported into a new world called Celestial World. No one knew
                 the reason why nor what the purpose was all about.
               </p>
-              <a href="https://www.webnovel.com/book/rise-my-elementals!_16678414605795005" class="btn btn-primary"
-                target="_blank">Continue</a>
+              <a href="https://www.webnovel.com/book/rise-my-elementals!_16678414605795005/leo-heart_44773226500385365"
+                class="btn btn-primary" target="_blank">Continue</a>
             </div>
           </div>
         </div>
@@ -266,8 +195,8 @@
                 settle with surviving rather than living, he had finally found his place in the world, until everything
                 was taken from him one last time.
               </p>
-              <a href="https://www.webnovel.com/book/supreme-magus_12820870105509205" class="btn btn-primary"
-                target="_blank">Continue</a>
+              <a href="https://www.webnovel.com/book/supreme-magus_12820870105509205/a-new-beginning_34415834751367671"
+                class="btn btn-primary" target="_blank">Continue</a>
             </div>
           </div>
         </div>
@@ -396,115 +325,11 @@
   </div>
 
 
-  <!--List Groups-->
 
-  <div class="container">
-    <hr>
-    <h2>Lastest Update</h2>
-    <div class="row">
-      <div class="col-6">
-        <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Divine Emperor of Death</h5>
-              <small>50 mins ago</small>
-            </div>
-            <img src="https://readnoveldaily.net/server-1/divine-emperor-of-death.jpg" alt="Image 1" class="mb-1">
-            <p class="mb-1">Eastern Fantasy</p>
-            <small>5<i class="bi bi-stars"></i></small>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Infinite Mane In The Apocalypese</h5>
-              <small class="text-body-secondary">1hr 30mins ago</small>
-            </div>
-            <img src="photos/NoahOsmot.jpg" alt="Image 1" class="mb-1">
-            <p class="mb-1">Fantasy, Sword & Magic</p>
-            <small class="text-body-secondary"><small>5<i class="bi bi-stars"></i></small></small>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Strongest Necromancer of the Heaven's Gate</h5>
-              <small class="text-body-secondary">2hrs ago</small>
-            </div>
-            <img src="photos/StrongestNecro.jpg" alt="Image 1" class="mb-1">
-            <p class="mb-1">Fantasy, Romance</p>
-            <small class="text-body-secondary"><small>5<i class="bi bi-stars"></i></small></small>
-          </a>
-        </div>
-      </div>
 
-      <div class="col-6">
-        <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Shadow Slave</h5>
-              <small>5hrs ago</small>
-            </div>
-            <img src="https://readnoveldaily.net/server-1/shadow-slave.jpg" alt="Image 1" class="mb-1">
-            <p class="mb-1">Fantasy, Dark</p>
-            <small><small>5<i class="bi bi-stars"></i></small></small>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Earth's Greatest Magus</h5>
-              <small class="text-body-secondary">8hrs ago</small>
-            </div>
-            <img src="https://readnoveldaily.net/server-1/earths-greatest-magus.jpg" alt="Image 1" class="mb-1">
-            <p class="mb-1">Fantasy, Isekai</p>
-            <small class="text-body-secondary"><small>4.5<i class="bi bi-stars"></i></small></small>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">MMORPG : Rebirth Of The Strongest Vampire God</h5>
-              <small class="text-body-secondary">16hrs ago</small>
-            </div>
-            <img src="https://readnoveldaily.net/server-1/mmorpg-rebirth-of-the-strongest-vampire-god.jpg" alt="Image 1"
-              class="mb-1">
-            <p class="mb-1">Fantasy, Video Games</p>
-            <small class="text-body-secondary"><small>4.9<i class="bi bi-stars"></i></small></small>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <br>
-  <!--Card & List Group-->
-  <div class="container">
-    <hr>
-    <h4 id="weeklyf"><i class="bi bi-reception-4"></i> Rankings</h4>
-    <div class="row">
-      <div class="col-6">
-        <div class="col-6">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">1. Infinite Mane In The Apocalypese <small>5<i class="bi bi-stars"></i></small>
-            </li>
-            <li class="list-group-item">2. Trash of the Count's Family <small>5<i class="bi bi-stars"></i></small></li>
-            <li class="list-group-item">3. Strongest Necromancer of the Heaven's Gate <small>5<i
-                  class="bi bi-stars"></i></small></li>
-            <li class="list-group-item">4. Reincarnated With The Strongest System <small>5<i
-                  class="bi bi-stars"></i></small></li>
-            <li class="list-group-item">5. MMORPG: Rise of the Primordial Godsmith <small>4.5<i
-                  class="bi bi-stars"></i></small></li>
-          </ul>
-        </div>
-      </div>
 
-      <div class="col-6">
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">6. Arcane Academy: The Divine Extraction Legacy <small>4.6<i
-                class="bi bi-stars"></i></small></li>
-          <li class="list-group-item">7. Rise My Elementals! <small>3.5<i class="bi bi-stars"></i></small></li>
-          <li class="list-group-item">8. Supreme Magus <small>4.9<i class="bi bi-stars"></i></small></li>
-          <li class="list-group-item">9. Humanity's Greatest Mecha Warrior System <small>4.9<i
-                class="bi bi-stars"></i></small></li>
-          <li class="list-group-item">10. MMORPG : Rebirth Of The Strongest Guild Master <small>5<i
-                class="bi bi-stars"></i></small></li>
-        </ul>
-      </div>
-    </div>
-  </div>
+
 
   <!-- Footer -->
   <footer class="text-center text-lg-start bg-light text-muted">
@@ -630,7 +455,6 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer End -->
-
 
   <!-- Modal SIGN-IN LOG-IN -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
