--- a/BIB.html
+++ b/BIB.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>BIB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -22,154 +22,103 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style2.css">
     <link rel="icon" type="image/png" href="photos/grid-c-logo.png">
 </head>
 
-<style>
-    body {
-        text-align: center;
-
-    }
-
-    body p {
-        text-align: justify;
-    }
-
-    body{
-        background: url(photos/bookshelfbg.jpg);
-    }
-
-    body .card{
-        text-align: center;
-    }
-
-</style>
-
 <body>
     <!--HEADERRRRRRRR-->
-  <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand text-dark" href="index.html"><span class="myiloglog">Grid-C</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active text-dark" aria-current="page" href="BIB.html" data-bs-toggle="tooltip"
-                data-placement="bottom" title="Bring Into Being">
-                <i class="bi bi-pen"></i> B.I.B.
-              </a>
-            </li>
-            <!--Novel Genre-->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button"
-                aria-expanded="false">
-                <i class="bi bi-book-half"></i> Novels
-              </a>
-              <ul class="dropdown-menu text-dark">
-                <li><a class="dropdown-item text-dark" href="#">Fantasy</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Video Games</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Kingdom Building</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Slice of life</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Sci-Fi</a></li>
-                <li><a class="dropdown-item text-dark" href="#">Sword & Magic</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item text-dark" href="#">More...</a></li>
-              </ul>
-            </li>
-            <!--Rankings-->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-dark" href="#oltime" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <i class="bi bi-reception-4"></i> Rankings
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item text-dark" href="#monthlyf">Monthly</a></li>
-                <li><a class="dropdown-item text-dark" href="#weeklyf">Weekly</a></li>
-                <li>
-                  <hr class="dropdown-divider text-dark">
-                </li>
-                <li><a class="dropdown-item text-dark" href="#">All-Time</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="library.html">
-                <i class="bi bi-bookshelf"></i> Library
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active text-dark" aria-current="page" href="#" data-bs-toggle="tooltip"
-                data-placement="bottom" title="Bring Into Being">
-                <i class="bi bi-sun-fill" id="toggleDark"></i>
-                <i class="bi bi-moon-stars-fill"></i>
-              </a>
-            </li>
-          </ul>
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand text-dark" href="index.html"><span class="myiloglog">Grid-C</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-dark" aria-current="page" href="BIB.html"
+                                data-bs-toggle="tooltip" data-placement="bottom" title="Bring Into Being">
+                                <i class="bi bi-pen"></i> B.I.B.
+                            </a>
+                        </li>
+                        <!--Novel Genre-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#"
+                                role="button" aria-expanded="false">
+                                <i class="bi bi-book-half"></i> Novels
+                            </a>
+                            <ul class="dropdown-menu text-dark">
+                                <li><a class="dropdown-item text-dark" href="#">Fantasy</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Video Games</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Kingdom Building</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Slice of life</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Sci-Fi</a></li>
+                                <li><a class="dropdown-item text-dark" href="#">Sword & Magic</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item text-dark" href="#">More...</a></li>
+                            </ul>
+                        </li>
+                        <!--Rankings-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#oltime" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-reception-4"></i> Rankings
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item text-dark" href="#monthlyf">Monthly</a></li>
+                                <li><a class="dropdown-item text-dark" href="#weeklyf">Weekly</a></li>
+                                <li>
+                                    <hr class="dropdown-divider text-dark">
+                                </li>
+                                <li><a class="dropdown-item text-dark" href="#">All-Time</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="library.html">
+                                <i class="bi bi-bookshelf"></i> Library
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-dark" aria-current="page" href="#" data-bs-toggle="tooltip"
+                                data-placement="bottom" title="Bring Into Being">
+                                <i class="bi bi-sun-fill" id="toggleDark"></i>
+                                <i class="bi bi-moon-stars-fill"></i>
+                            </a>
+                        </li>
+                    </ul>
 
-          <!--Search Bar-->
-          <form class="d-flex px-2">
-            <input class="form-control me-sm-2" type="search" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form>
-
-
-          <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Log In
-          </button>
+                    <!--Search Bar-->
+                    <form class="d-flex px-2">
+                        <input class="form-control me-sm-2" type="search" placeholder="Search">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    </form>
 
 
-        </div>
-      </div>
-    </nav>
-  </header>
-  <!--HEADER END-->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Log In
+                    </button>
 
-    <!--About Content-->
-    <div class="h-75 d-inline-block py-5" style="width: 500px;">
-        <div class="card" style="width: 150px;">
-            <div class="text-center">
-                <h1>About</h1>
+
+                </div>
             </div>
-        </div>
-        
-        <hr>
-        <div class="card">
-            <div class="card-body">
-                <p>Welcome to Grid-C, where the worlds of words and creativity collide! We've meticulously crafted this
-                    digital
-                    oasis to bring together the brightest minds and untamed imaginations of Southeast Asian authors. Why
-                    Grid-C,
-                    you ask? Well, think of it as a metaphorical grid, capturing the electrifying energy and boundless
-                    potential
-                    of our literary community.
+        </nav>
+    </header>
+    <!--HEADER END-->
 
-                    In this vibrant space, we embrace the unpolished brilliance of talented authors who may have been
-                    overlooked
-                    elsewhere. We believe that within every uncut diamond lies a captivating story waiting to be shared.
-                    So,
-                    whether you're a reader seeking new realms to explore or an author ready to unveil your literary
-                    prowess,
-                    Grid-C is your gateway to a world where imagination knows no bounds.
 
-                    Join us on this exhilarating journey as we shine a spotlight on Southeast Asia's literary treasures.
-                    From
-                    heart-stirring tales of love and loss to epic adventures that will transport you to distant lands,
-                    Grid-C is
-                    your passport to discovering the uncharted depths of storytelling. So, buckle up and prepare to be
-                    dazzled
-                    by the literary wonders that await you in the captivating universe of Grid-C!</p>
-            </div>
-        </div>
-        <hr>
+    <div class="bibcontainer">
+        <h1>ERROR 404</h1>
+        <p>B.I.B. Page is Under Construction.</p>
     </div>
 
-    <!--About END-->
+
 
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-light text-muted">
@@ -325,6 +274,7 @@
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
